--- a/src/main/resources/fxml/mainWindow.fxml
+++ b/src/main/resources/fxml/mainWindow.fxml
@@ -2,24 +2,29 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="392.0" prefWidth="503.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainWindowController">
    <children>
-      <HBox layoutX="152.0" layoutY="75.0" prefHeight="30.0" prefWidth="59.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <Button mnemonicParsing="false" onMouseClicked="#onMinimize" prefHeight="25.0" prefWidth="30.0" style="-fx-background-insets: 0; -fx-border-width: 1; -fx-border-color: #adadad;" text="_">
-               <font>
-                  <Font name="Monospaced Bold" size="10.0" />
-               </font>
-            </Button>
-            <Button fx:id="btnClose" mnemonicParsing="false" onMouseClicked="#onClose" prefHeight="25.0" prefWidth="30.0" style="-fx-background-insets: 0; -fx-border-width: 1; -fx-border-color: #adadad;" text="X">
-               <font>
-                  <Font name="Monospaced Bold" size="10.0" />
-               </font>
-            </Button>
-         </children>
-      </HBox>
+      <BorderPane fx:id="contentPane" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <top>
+            <HBox alignment="TOP_RIGHT" prefHeight="30.0" prefWidth="59.0">
+               <children>
+                  <Button mnemonicParsing="false" onMouseClicked="#onMinimize" prefHeight="25.0" prefWidth="30.0" style="-fx-background-insets: 0; -fx-border-width: 1; -fx-border-color: #adadad;" text="_">
+                     <font>
+                        <Font name="Monospaced Bold" size="10.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="btnClose" mnemonicParsing="false" onMouseClicked="#onClose" prefHeight="25.0" prefWidth="30.0" style="-fx-background-insets: 0; -fx-border-width: 1; -fx-border-color: #adadad;" text="X">
+                     <font>
+                        <Font name="Monospaced Bold" size="10.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
+         </top>
+      </BorderPane>
    </children>
 </AnchorPane>
