--- a/src/main/resources/fxml/slide.fxml
+++ b/src/main/resources/fxml/slide.fxml
@@ -1,31 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
-<FlowPane alignment="CENTER" columnHalignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="150.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.slideController">
+<FlowPane alignment="CENTER" columnHalignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: #1b251d;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.slideController">
    <children>
       <HBox alignment="CENTER" prefHeight="29.0" prefWidth="152.0">
          <children>
             <Slider fx:id="rSlide" majorTickUnit="51.0" max="255.0" prefHeight="14.0" prefWidth="122.0" />
-            <Label text="R" />
+            <Label text="R" textFill="RED" />
          </children>
       </HBox>
       <HBox alignment="CENTER" layoutX="9.0" layoutY="85.0" prefHeight="29.0" prefWidth="152.0">
          <children>
             <Slider fx:id="gSlide" majorTickUnit="51.0" max="255.0" prefHeight="14.0" prefWidth="122.0" />
-            <Label text="G" />
+            <Label text="G" textFill="LIME" />
          </children>
       </HBox>
       <HBox alignment="CENTER" layoutX="9.0" layoutY="99.0" prefHeight="29.0" prefWidth="152.0">
          <children>
             <Slider fx:id="bSlide" majorTickUnit="51.0" max="255.0" prefHeight="14.0" prefWidth="122.0" />
-            <Label text="B" />
+            <Label text="B" textFill="BLUE" />
          </children>
       </HBox>
-      <TextField fx:id="rgbTxt" prefHeight="25.0" prefWidth="73.0" promptText="#" />
+      <TextField fx:id="rgbTxt" onKeyPressed="#colorEnter" prefHeight="25.0" prefWidth="73.0" promptText="#" text=" #1b251d" />
+      <HBox alignment="CENTER" prefHeight="37.0" prefWidth="134.0" spacing="13.0">
+         <children>
+            <Button fx:id="btnUndo" mnemonicParsing="false" onMouseClicked="#clickUndo" prefHeight="25.0" prefWidth="30.0" text="⬅" />
+            <Button fx:id="btnRedo" mnemonicParsing="false" onMouseClicked="#clickRedo" prefHeight="25.0" prefWidth="30.0" text="➡">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+         </children>
+      </HBox>
    </children>
 </FlowPane>
